# Quantstrat-Summer-Project

./: .env  .env.example  .gitignore  2_Elastic_Net.py  Literature Review.ipynb  LiteratureReview_CampbellThompson2008.ipynb  Literature_Review_SK.ipynb  README.md  ReplicationProjectTemplate.ipynb  pyproject.toml  quantstratproject.py
configs/: default.toml  default.yaml
data/: README.md
data/processed/: industry_characteristic_interaction_names.json  industry_characteristic_interactions.npz  model_panel_manifest.json
docs/: methodology.md
reports/: README.md
scripts/: README.md  rank_stock_characteristics.py  run_pipeline.py
scripts/data_downloading/: download_and_convert_fama_french_factors.py  download_and_convert_welch_goyal_macro.py  download_available_missing_osap_characteristics.py  download_wrds_missing_characteristics.py
scripts/data_processing/: build_missing_crsp_characteristics.py  build_model_panel.py  build_paper_73_characteristics_panel.py  convert_aqr_vme_datasets.py  convert_paper_model_inputs.py  convert_raw_csv_to_parquet.py  merge_crsp_parquet_by_time.py  sort_raw_parquet_by_time.py
src/quantstrat/: __init__.py
src/quantstrat/Engine/: engine.py
src/quantstrat/data/: __init__.py  ingest.py  schema.py
src/quantstrat/evaluation/: __init__.py  importance.py  metrics.py  model_comparison.py
src/quantstrat/features/: __init__.py  interactions.py  ranking.py
src/quantstrat/models/: OLS.py  Ridge.py  __init__.py  base.py  random_forest.py  registry.py  ridge_1.py  sklearn_adapters.py  splits.py  (+1 more)
tests/: test_metrics.py  test_splits.py
(+3 files in other folders)
