[project]
name = "quantstrat-ml-asset-pricing"
version = "0.1.0"
description = "Research scaffold for reproducing an empirical asset pricing machine-learning workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]
models = [
  "xgboost>=2.0",
  "torch>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
